         an additional slot 'options' and 'genomeAnnotation'.  options
         is a list with the default arguments to snprma, crlmm, etc,
         as well as a few global settings such as 'verbose' and
         'seed'.  I added the genomeAnnotation slot simply because I
         want to be able to use ff-objects for the feature-level data.
         Maybe with setClassUnion we could avoid adding the
         genomeAnnotation slot (and use featureData instead), but I
         didn't have much success with this.

	 - the batchSize argument will run the genotyping (crlmmGT) in
           batches to reduce the RAM.  The default is batches of size
           1000.

	 - The crlmm.Rd file contains an example with / without ff
             for Affymetrix data.

2010-03-08 M. Ritchie committed version 1.5.31
 * removed a few unnecessary lines of code from crlmm-illumina.R (zero not needed as argument for preprocessInfinium2() and storageMode should not be "lockedEnvironment" in RGtoXY()) 
 * added "humanomni1quadv1b" to validCdfName() in utils.R

2010-03-08 R.Scharpf committed version 1.5.32

**	   Rolled back to version 1.5.24 
	   
2010-03-08 R.Scharpf committed version 1.5.33

**	  Added annotatedDataFrameFrom methods for ff_matrix and ffdf (in utils)

2010-03-10 R.Scharpf committed version 1.5.34

**	  updated DESCRIPTION to import ff
**        added AllClasses.R with defitions for ff-derived classes
**        temporarily exporting everything in the NAMESPACE

2010-03-11 R.Scharpf committed version 1.5.35

**        added genotype() in cnrma-functions -- for preprocessing and
          genotyping affy

2010-03-14 R.Scharpf committed version 1.5.36

**   added crlmmIlluminaRS to cnrma-functions.R (testing)

2010-03-18 R.Scharpf committed version 1.5.37

**   fixed bugs in genotype() and crlmmIlluminaRS.
     (currently saving intermediate steps in crlmmIlluminaRS)
     removed cnOptions function and changed arguments to crlmmCopynumber
